--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   alt="$SUNGOD"
                   width="512"
                   height="512"
-                  style="position: relative; top: -20px; left: -350px"
+                  class="ban_img"
                 />
               </div>
               <h2
@@ -119,7 +119,11 @@
         <div id="about" class="story layer-2">
           <div class="story__container container">
             <div class="story__inner">
-              <img src="img/logo2.png" alt="" />
+              <img
+                src="img/logo2.png"
+                style="width: 100%; max-width: 500px"
+                alt=""
+              />
               <div class="story__col">
                 <h2 class="story__title">$SUNGOD</h2>
                 <p class="story__text">
