--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
             </div>
             <div class="tokenomics__grid">
               <div class="tokenomics__item">
-                <span class="tokenomics__label">taxes</span>
-                <span class="tokenomics__value">0%</span>
+                <span class="tokenomics__label">Sungod</span>
+                <span class="tokenomics__value">NAME</span>
               </div>
               <div class="tokenomics__item">
                 <span class="tokenomics__label">liquidity</span>
                 <span class="tokenomics__value">BURNED</span>
               </div>
               <div class="tokenomics__item">
-                <span class="tokenomics__label">mint &amp;freeze</span>
-                <span class="tokenomics__value">REVOKED</span>
+                <span class="tokenomics__label">$SUNGOD</span>
+                <span class="tokenomics__value">TICKER</span>
               </div>
               <div class="tokenomics__item">
                 <span class="tokenomics__label">supply total</span>
@@ -210,12 +210,12 @@
             <h2 class="buy__title">HOW TO BUY $SUNGOD</h2>
             <div class="buy__grid">
               <div class="buy__item">
-                <img class="buy__icon" src="img/gate.webp" alt="" />
-                <h5 class="buy__subtitle">Download GATE Extension</h5>
+                <img class="buy__icon" src="img/gate.png" alt="" />
+                <h5 class="buy__subtitle">Download Trust wallet Extension</h5>
                 <p class="buy__text">
-                  Download and install gate on the appstore, or, alternatively
-                  if you’re on desktop download and install the browser
-                  extension.
+                  Download and install Trust wallet on the appstore, or,
+                  alternatively if you’re on desktop download and install the
+                  browser extension.
                 </p>
                 <div class="buy__arrow">
                   <svg
@@ -236,7 +236,7 @@
               <div class="buy__item">
                 <img class="buy__icon" src="/img/ton.webp" alt="" />
                 <h5 class="buy__subtitle">Second STEP</h5>
-                <p class="buy__text">You need to buy some TON</p>
+                <p class="buy__text">You need to buy some Tron</p>
                 <div class="buy__arrow">
                   <svg
                     width="32"
@@ -263,7 +263,7 @@
                     target="_blank"
                     >Sunpump</a
                   >
-                  and paste the $SUNGOD Contract Address to swap your TON.
+                  and paste the $SUNGOD Contract Address to swap your Tron.
                 </p>
                 <div class="buy__arrow">
                   <svg
