--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <canvas width="400" height="400"></canvas>
         </div>
         <!-- section htb  -->
-        <!-- <section id="how-to-buy" class="buy layer-2">
+        <section id="how-to-buy" class="buy layer-2">
           <div class="buy__container container layer-2">
             <h2 class="buy__title">HOW TO BUY $SUNGOD</h2>
             <div class="buy__grid">
@@ -237,7 +237,7 @@
                 </div>
               </div>
               <div class="buy__item">
-                <img class="buy__icon" src="/img/ton.webp" alt="" />
+                <img class="buy__icon" src="/img/tron.png" alt="" />
                 <h5 class="buy__subtitle">Second STEP</h5>
                 <p class="buy__text">You need to buy some Tron</p>
                 <div class="buy__arrow">
@@ -342,11 +342,11 @@
                 ><a href="#" target="_blank"
                   ><img src="/img/bingx.png" alt=""
                 /></a>
-              </div> 
+              </div>
             </div>
           </div>
           <canvas class="buy__anim"></canvas>
-        </section> -->
+        </section>
         <section></section>
         <section id="community" class="community layer-2">
           <div class="community__container container">
