--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimum-scale=1"
     />
     <title>$SUNGOD</title>
+    <link href="https://unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <style>
       .water {
         background-color: transparent;
@@ -122,7 +123,7 @@
           <div class="story__container container">
             <div class="story__inner">
               <img
-                src="img/logo2.png"
+                src="img/abt.png"
                 style="width: 100%; max-width: 500px"
                 alt=""
               />
@@ -440,6 +441,12 @@
         </footer>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="theme-assets/vendors/waypoints/jquery.waypoints.min.js"></script>
+    <script src="https://unpkg.com/aos%402.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
