--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimum-scale=1"
     />
     <title>$SUNGOD</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link href="https://unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet" />
     <style>
       .water {
@@ -54,43 +60,56 @@
           >
         </div>
       </header>
-      <section id="home" class="hero">
-        <div class="hero__container container layer-1">
-          <canvas class="hero__scrat layer-1"></canvas>
-          <div class="hero__col layer-2">
-            <div class="hero__title">
-              <div class="decor">
-                <img class="decor__bag" src />
-                <img
-                  src="img/logo1.png"
-                  alt="$SUNGOD"
-                  width="512"
-                  height="512"
-                  class="ban_img"
-                />
-              </div>
-              <h2
-                style="text-align: center; font-size: 72px; font-weight: bold"
-              >
-                $SUNGOD
-              </h2>
+      <section id="home" class="hero" style="padding-top: 120px">
+        <div class="container">
+          <div
+            class="row"
+            style="display: flex; align-items: center; justify-content: center"
+          >
+            <div
+              class="col-md-6"
+              data-aos="fade-right"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                src="img/logo1.png"
+                style="width: 100%; max-width: 500px"
+                alt="$SUNGOD"
+                width="512"
+                height="512"
+              />
             </div>
-            <p class="hero__text">
-              Worship at the altar of the Sun with $SUNGOD
-            </p>
-            <div class="hero__socials">
-              <a
-                class="header__btn btn"
-                href="https://t.me/SunGod_Poral"
-                target="_blank"
-                >TELEGRAM</a
-              >
-              <a
-                class="header__btn btn"
-                href="https://x.com/SunGodTRON"
-                target="_blank"
-                >TWITTER</a
-              >
+            <div
+              class="col-md-6"
+              data-aos="fade-left"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <div class="ban_txt">
+                <h2
+                  style="text-align: center; font-size: 72px; font-weight: bold"
+                >
+                  $SUNGOD
+                </h2>
+                <p class="hero__text">
+                  Worship at the altar of the Sun with $SUNGOD
+                </p>
+                <div class="hero__socials">
+                  <a
+                    class="header__btn btn"
+                    href="https://t.me/SunGod_Poral"
+                    target="_blank"
+                    >TELEGRAM</a
+                  >
+                  <a
+                    class="header__btn btn"
+                    href="https://x.com/SunGodTRON"
+                    target="_blank"
+                    >TWITTER</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -125,9 +144,17 @@
               <img
                 src="img/abt.png"
                 style="width: 100%; max-width: 500px"
+                data-aos="fade-right"
+                data-aos-delay="100"
+                data-aos-duration="1000"
                 alt=""
               />
-              <div class="story__col">
+              <div
+                class="story__col"
+                data-aos="fade-left"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <h2 class="story__title">$SUNGOD</h2>
                 <p class="story__text">
                   <br />
@@ -153,9 +180,21 @@
         </div>
         <div id="tokenomics" class="tokenomics layer-3">
           <div class="tokenomics__container container">
-            <h2 class="tokenomics__title">Tokenomics</h2>
+            <h2
+              class="tokenomics__title"
+              data-aos="fade-down"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              Tokenomics
+            </h2>
             <p class="tokenomics__text"></p>
-            <div class="tokenomics__contract contract">
+            <div
+              class="tokenomics__contract contract"
+              data-aos="fade-down"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
               <div>
                 <span class="contract__label">Contract address</span>
                 <span class="contract__value"
@@ -181,19 +220,39 @@
               </button>
             </div>
             <div class="tokenomics__grid">
-              <div class="tokenomics__item">
+              <div
+                class="tokenomics__item"
+                data-aos="fade-right"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <span class="tokenomics__label">Sungod</span>
                 <span class="tokenomics__value">NAME</span>
               </div>
-              <div class="tokenomics__item">
+              <div
+                class="tokenomics__item"
+                data-aos="fade-down"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <span class="tokenomics__label">liquidity</span>
                 <span class="tokenomics__value">BURNED</span>
               </div>
-              <div class="tokenomics__item">
+              <div
+                class="tokenomics__item"
+                data-aos="fade-up"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <span class="tokenomics__label">$SUNGOD</span>
                 <span class="tokenomics__value">TICKER</span>
               </div>
-              <div class="tokenomics__item">
+              <div
+                class="tokenomics__item"
+                data-aos="fade-left"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <span class="tokenomics__label">supply total</span>
                 <span class="tokenomics__value">1B</span>
               </div>
@@ -211,9 +270,21 @@
         <!-- section htb  -->
         <section id="how-to-buy" class="buy layer-2">
           <div class="buy__container container layer-2">
-            <h2 class="buy__title">HOW TO BUY $SUNGOD</h2>
+            <h2
+              class="buy__title"
+              data-aos="fade-right"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              HOW TO BUY $SUNGOD
+            </h2>
             <div class="buy__grid">
-              <div class="buy__item">
+              <div
+                class="buy__item"
+                data-aos="fade-right"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <img class="buy__icon" src="img/gate.png" alt="" />
                 <h5 class="buy__subtitle">Download Trust wallet Extension</h5>
                 <p class="buy__text">
@@ -237,7 +308,12 @@
                   </svg>
                 </div>
               </div>
-              <div class="buy__item">
+              <div
+                class="buy__item"
+                data-aos="fade-left"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <img class="buy__icon" src="/img/tron.png" alt="" />
                 <h5 class="buy__subtitle">Second STEP</h5>
                 <p class="buy__text">You need to buy some Tron</p>
@@ -257,7 +333,12 @@
                   </svg>
                 </div>
               </div>
-              <div class="buy__item">
+              <div
+                class="buy__item"
+                data-aos="fade-right"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <img class="buy__icon" src="img/logo1.png" alt="" />
                 <h5 class="buy__subtitle">Buy some $SUNGOD</h5>
                 <p class="buy__text">
@@ -285,7 +366,12 @@
                   </svg>
                 </div>
               </div>
-              <div class="buy__item">
+              <div
+                class="buy__item"
+                data-aos="fade-left"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <img class="buy__icon" src="img/logo2.png" alt="" />
                 <h5 class="buy__subtitle">Add to Your Wallet</h5>
                 <p class="buy__text">
@@ -351,11 +437,29 @@
         <section></section>
         <section id="community" class="community layer-2">
           <div class="community__container container">
-            <img src="img/logo1.png" alt="" />
+            <img
+              src="img/logo1.png"
+              alt=""
+              data-aos="fade-right"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            />
             <div class="community__col">
-              <h2 class="community__title">SUNGOD COMMUNITY</h2>
+              <h2
+                class="community__title"
+                data-aos="fade-left"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
+                SUNGOD COMMUNITY
+              </h2>
               <p class="community__text"></p>
-              <div class="community__btns">
+              <div
+                class="community__btns"
+                data-aos="fade-left"
+                data-aos-delay="100"
+                data-aos-duration="1000"
+              >
                 <a
                   class="community__btn"
                   href="https://t.me/SunGod_Poral"
