--- a/index.html
+++ b/index.html
@@ -286,9 +286,11 @@
                 data-aos-duration="1000"
               >
                 <img class="buy__icon" src="img/gate.png" alt="" />
-                <h5 class="buy__subtitle">Download Trust wallet Extension</h5>
+                <h5 class="buy__subtitle">
+                  Download Tronlink wallet Extension
+                </h5>
                 <p class="buy__text">
-                  Download and install Trust wallet on the appstore, or,
+                  Download and install Tronlink wallet on the appstore, or,
                   alternatively if you’re on desktop download and install the
                   browser extension.
                 </p>
