--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
       <header class="header layer-5">
         <div class="header__container container">
           <div class="header__logo logo">
-            <img class="logo__icon" src="img/logo2.png" alt="$SUNGOD" />
+            <a
+              href="http://"
+              target="_blank"
+              rel="noopener noreferrer"
+              style="color: #fff; font-size: 52px; font-style: italic"
+              >Sungod</a
+            >
             <span></span>
           </div>
           <nav class="header__nav">
