--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               href="http://"
               target="_blank"
               rel="noopener noreferrer"
-              style="color: #fff; font-size: 52px; font-style: italic"
+              class="logo_ds"
               >Sungod</a
             >
             <span></span>
