--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 data-aos-delay="100"
                 data-aos-duration="1000"
               >
-                <h2 class="story__title">$SUNGOD</h2>
+                <h2 class="story__title ttl">$SUNGOD</h2>
                 <p class="story__text">
                   <br />
                   Embrace the divine power of the Sun and channel its infinite
