--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           >
         </div>
       </header>
-      <section id="home" class="hero" style="padding-top: 120px">
+      <section id="home" class="hero" style="padding-top: 160px">
         <div class="container">
           <div
             class="row"
@@ -78,13 +78,13 @@
               data-aos-delay="100"
               data-aos-duration="1000"
             >
-              <img
+              <!-- <img
                 src="img/logo1.png"
                 style="width: 100%; max-width: 500px"
                 alt="$SUNGOD"
                 width="512"
                 height="512"
-              />
+              /> -->
             </div>
             <div
               class="col-md-6"
