--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
       </picture>
       <header class="header layer-5">
         <div class="header__container container">
+          <div class="header__logo logo" style="opacity: 0; visibility: hidden">
+            <a
+              href="http://"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="logo_ds"
+              >Sungod</a
+            >
+            <span></span>
+          </div>
           <nav class="header__nav">
             <a href="#about">About</a>
             <a href="#tokenomics">Tokenomics</a>
