--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           >
         </div>
       </header>
-      <section id="home" class="hero" style="padding-top: 160px">
+      <section id="home" class="hero" style="padding-top: 160px 0 0 0">
         <div class="container">
           <div
             class="row"
@@ -78,13 +78,11 @@
               data-aos-delay="100"
               data-aos-duration="1000"
             >
-              <!-- <img
-                src="img/logo1.png"
-                style="width: 100%; max-width: 500px"
+              <img
+                src="img/ban.png"
+                style="width: 100%; max-width: 500px; height: auto"
                 alt="$SUNGOD"
-                width="512"
-                height="512"
-              /> -->
+              />
             </div>
             <div
               class="col-md-6"
